[package]
name = "gt7-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
salsa20 = "0.10.2"
thiserror = "1.0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitflags = { version = "2.3.3", features = ["serde"] }
glium = "0.32.1"
imgui = "0.11.0"
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
